--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,10 @@
 {
-  "name": "geniv/nette-authenticator",
-  "description": "Identity extension for Nette Framework",
+  "name": "geniv/nette-tracy-clean",
+  "description": "Tracy clean extension for Nette Framework",
   "keywords": [
     "nette",
-    "identity",
-    "user",
-    "login",
-    "authenticator",
+    "tracy",
+    "clean",
     "geniv"
   ],
   "license": "GPL-3.0",
@@ -18,8 +16,7 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "nette/nette": ">=2.4.0",
-    "dibi/dibi": ">=3.0.0"
+    "nette/nette": ">=2.4.0"
   },
   "autoload": {
     "classmap": [
